--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     
    <p class="centered-button">
-    <a href="Amber game Now(2).apk" download>
+    <a href="Amber Game Now (4).apk" download>
         <button>Download</button>
     </a>
 </p>
