--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
     </div>
     <div class="carousel-container">
         <div class="image-carousel">
-            <img class="carousel-image" src="atirador_misterioso1.png" alt="Imagem 1">
-            <img class="carousel-image" src="atirador_misterioso2.png" alt="Imagem 2">
-            <img class="carousel-image" src="atirador_misterio3.png" alt="Imagem 3">
+            <img class="carousel-image" src="atirador_misterioso1.jpg" alt="Imagem 1">
+            <img class="carousel-image" src="atirador_misterioso2.jpg" alt="Imagem 2">
+            <img class="carousel-image" src="atirador_misterio3.jpg" alt="Imagem 3">
         </div>
     </div>
     <footer>
