--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <div class="container">
         <div class="image-container">
-            <img src="atirador_misterioso.png" alt="Descrição da imagem">
+            <img src="currency-coin-cartoon-png.png" alt="Descrição da imagem">
             <div class="text-next-to-image">Atirador: Desafio de Vitórias Valiosas!</div>
         </div>
         <p>Jogue, desafie e vença em <strong>Atirador: Desafio de Vitórias Valiosas!</strong> onde a diversão se une à emoção de ganhar dinheiro jogando um clássico atemporal. Pegue seu celular, convide seus amigos e comece a jogar hoje mesmo - quem sabe você não será o próximo vencedor a levar para casa uma recompensa valiosa?</p>
