--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atirador Misterioso</title>
+    <title>Atirador Misterioso/Recompensas ilimitadas</title>
     <style>
         body {
             background-color: #444444;
@@ -109,12 +109,12 @@
     </div>
     <div class="container">
         <div class="image-container">
-            <img src="currency-coin-cartoon-png.png" alt="Descrição da imagem">
+            <img src="atirador_misterioso0.jpg" alt="Descrição da imagem">
             <div class="text-next-to-image">Atirador: Desafio de Vitórias Valiosas!</div>
         </div>
         <p>Jogue, desafie e vença em <strong>Atirador: Desafio de Vitórias Valiosas!</strong> onde a diversão se une à emoção de ganhar dinheiro jogando um clássico atemporal. Pegue seu celular, convide seus amigos e comece a jogar hoje mesmo - quem sabe você não será o próximo vencedor a levar para casa uma recompensa valiosa?</p>
         <div class="centered-button">
-            <a href="AtiradorMisterioso.apk" download>
+            <a href="ssa.atirador.habilidoso-1.1.apk" download>
                 <button>Download</button>
             </a>
         </div>
