--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="image-carousel">
             <img class="carousel-image" src="atirador_misterioso1.jpg" alt="Imagem 1">
             <img class="carousel-image" src="atirador_misterioso2.jpg" alt="Imagem 2">
-            <img class="carousel-image" src="atirador_misterio3.jpg" alt="Imagem 3">
+            <img class="carousel-image" src="atirador_misterioso3.jpg" alt="Imagem 3">
         </div>
     </div>
     <footer>
